src/objects/Package__c.object
<CustomObject>
    <fields>
        <fullName>Base_Product_Count__c</fullName>
        <label>Base Product Count</label>
        <summaryFilterItems>
            <field>Package_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Base Product</value>
        </summaryFilterItems>
        <summaryForeignKey>Package_Item__c.Package__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <picklist>
            <controllingField>Package_Type__c</controllingField>
            <picklistValues>
                <fullName>Full Prepaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring Prepaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring Postpaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bundle_Discount_Count__c</fullName>
        <description>Roll-up summary of package items where record type is Bundle Discount. This will use for validation rule where only one Bundle Discount must be allowed for Bundle package type.</description>
        <label>Bundle Discount Count</label>
        <summaryFilterItems>
            <field>Package_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Bundle Discount</value>
        </summaryFilterItems>
        <summaryForeignKey>Package_Item__c.Package__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Bundle_Product_Count__c</fullName>
        <description>Roll-up summary of package items where record type is Bundle Product. This will use for validation rule where only one Bundle Product must be allowed for Bundle package type.</description>
        <label>Bundle Product Count</label>
        <summaryFilterItems>
            <field>Package_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Bundle Product</value>
        </summaryFilterItems>
        <summaryForeignKey>Package_Item__c.Package__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Channel_Direct__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Channel: Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_E_shop_overseas__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Channel: E-shop (overseas)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_E_shop_private__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Channel: E-shop (private)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_E_shop_public__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Channel: E-shop (public)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Count__c</fullName>
        <label>Discount Count</label>
        <summaryFilterItems>
            <field>Package_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Discount</value>
        </summaryFilterItems>
        <summaryForeignKey>Package_Item__c.Package__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Duration_Hidden__c</fullName>
        <formula>( Effective_End_Date__c - Effective_Start_Date__c )/30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Hidden</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligible_Product_Family_for_Add_On_Pack__c</fullName>
        <label>EligibleProductFamily(forAdd-OnPackage)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension_Discount_Count__c</fullName>
        <description>Roll-up summary of package items where record type is Extension Discount. This will use for validation rule where only one Extension Discount must be allowed for Discount package type.</description>
        <label>Extension Discount Count</label>
        <summaryFilterItems>
            <field>Package_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Extension Discount</value>
        </summaryFilterItems>
        <summaryForeignKey>Package_Item__c.Package__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Extension_Product_Count__c</fullName>
        <description>Roll-up summary of package items where record type is Extension Product. This will use for validation rule where only one Extension Product must be allowed for Discount package type.</description>
        <label>Extension Product Count</label>
        <summaryFilterItems>
            <field>Package_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Extension Product</value>
        </summaryFilterItems>
        <summaryForeignKey>Package_Item__c.Package__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Frequency_Identifier__c</fullName>
        <description>[Kristine Campang 10/20/2014] created field for Item #2 in Build Remaining Items.</description>
        <label>Frequency Identifier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GST_Exclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicator for those Packages where there is no GST applied in order to handle GST at Package Price in ACK Letters</inlineHelpText>
        <label>GST Exclusive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Of_Promotions__c</fullName>
        <description>Total number of promotions that the package is associated.</description>
        <label>Number Of Promotions</label>
        <summaryForeignKey>Promotion_Package__c.Package_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Package_Code__c</fullName>
        <externalId>true</externalId>
        <label>Package Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Package_Item_Base_Hidden__c</fullName>
        <label>Package Item Base Hidden</label>
        <summaryFilterItems>
            <field>Package_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Base Product</value>
        </summaryFilterItems>
        <summaryForeignKey>Package_Item__c.Package__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Package_Item_Bundle_Hidden__c</fullName>
        <label>Package Item Bundle Hidden</label>
        <summaryFilterItems>
            <field>Package_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Bundle Product</value>
        </summaryFilterItems>
        <summaryForeignKey>Package_Item__c.Package__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Package_Price__c</fullName>
        <description>[Kristine Campang 10/15/2014] created field for Item #2 Line 4 Build Remaining Items v07</description>
        <label>Package Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Sub_Type__c</fullName>
        <label>Package Sub Type</label>
        <picklist>
            <controllingField>Package_Type__c</controllingField>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Package_Type__c</fullName>
        <label>Package Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grace Period</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <inlineHelpText>Updated by workflow with value from product platform on package item, used for reporting</inlineHelpText>
        <label>Platform</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_Current_Package_Map__c</fullName>
        <formula>Product_Family_Current_Package__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family(Current Package)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_Current_Package__c</fullName>
        <description>[Kristine Campang 10/14/2014]  Additional Item : Build Remaining Items v07 Item #36</description>
        <label>Product Family(Current Package)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_for_Add_On_Packages__c</fullName>
        <label>Product Family (for Add-On Packages)</label>
        <picklist>
            <picklistValues>
                <fullName>ST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TUPJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TABL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WSJA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Family_for_Add_On_Packages_del__c</fullName>
        <label>Product Family (for Add On Packages)</label>
        <picklist>
            <picklistValues>
                <fullName>ST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TUPJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TABL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WSJA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RenewalPkgCodeMag1YrBase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Pkg Code (Mag 1 Yr Base)</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RenewalPkgCodeMag1YrDisc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Pkg Code (Mag 1 Yr Disc)</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Packages (Renewal Pkg Code (Mag 1 Yr Disc))</relationshipLabel>
        <relationshipName>Packages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RenewalPkgCodeMag2YrBase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Pkg Code (Mag 2 Yr Base)</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Packages (Renewal Pkg Code (Mag 2 Yr Base))</relationshipLabel>
        <relationshipName>Packages2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RenewalPkgCodeMag2YrDisc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Pkg Code (Mag 2 Yr Disc)</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Packages (Renewal Pkg Code (Mag 2 Yr Disc))</relationshipLabel>
        <relationshipName>Packages3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RenewalPkgCodeNewspaper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Pkg Code (Newspaper)</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Packages (Renewal Pkg Code (Newspaper))</relationshipLabel>
        <relationshipName>Packages4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Same_Pck_Renewal_Mag_1_Yr_Base__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Pck Renewal (Mag 1 Yr Base)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Same_Pck_Renewal_Mag_1_Yr_Disc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Pck Renewal (Mag 1 Yr Disc)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Same_Pck_Renewal_Mag_2_Yr_Base__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Pck Renewal (Mag 2 Yr Base)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Same_Pck_Renewal_Mag_2_Yr_Disc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Pck Renewal (Mag 2 Yr Disc)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Same_Pck_Renewal_Newspaper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Pck Renewal (Newspaper)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subs_Period_Hidden__c</fullName>
        <formula>IF(ISPICKVAL(Subscription_Period__c, &quot;1&quot;), 1, 
IF(ISPICKVAL(Subscription_Period__c, &quot;2&quot;), 2,
IF(ISPICKVAL(Subscription_Period__c, &quot;3&quot;), 3,
IF(ISPICKVAL(Subscription_Period__c, &quot;4&quot;), 4,
IF(ISPICKVAL(Subscription_Period__c, &quot;5&quot;), 5,
IF(ISPICKVAL(Subscription_Period__c, &quot;6&quot;), 6,
IF(ISPICKVAL(Subscription_Period__c, &quot;7&quot;), 7,
IF(ISPICKVAL(Subscription_Period__c, &quot;8&quot;), 8,
IF(ISPICKVAL(Subscription_Period__c, &quot;9&quot;), 9,
IF(ISPICKVAL(Subscription_Period__c, &quot;10&quot;), 10,
IF(ISPICKVAL(Subscription_Period__c, &quot;11&quot;), 11,
IF(ISPICKVAL(Subscription_Period__c, &quot;12&quot;), 12,
IF(ISPICKVAL(Subscription_Period__c, &quot;13&quot;), 13,
IF(ISPICKVAL(Subscription_Period__c, &quot;14&quot;), 14,
IF(ISPICKVAL(Subscription_Period__c, &quot;15&quot;), 15,
IF(ISPICKVAL(Subscription_Period__c, &quot;16&quot;), 16,
IF(ISPICKVAL(Subscription_Period__c, &quot;17&quot;), 17,
IF(ISPICKVAL(Subscription_Period__c, &quot;18&quot;), 18,
IF(ISPICKVAL(Subscription_Period__c, &quot;19&quot;), 19,
IF(ISPICKVAL(Subscription_Period__c, &quot;20&quot;), 20,
IF(ISPICKVAL(Subscription_Period__c, &quot;21&quot;), 21,
IF(ISPICKVAL(Subscription_Period__c, &quot;22&quot;), 22,
IF(ISPICKVAL(Subscription_Period__c, &quot;23&quot;), 23,
IF(ISPICKVAL(Subscription_Period__c, &quot;24&quot;), 24,
IF(ISPICKVAL(Subscription_Period__c, &quot;25&quot;), 25,
IF(ISPICKVAL(Subscription_Period__c, &quot;26&quot;), 26,
IF(ISPICKVAL(Subscription_Period__c, &quot;27&quot;), 27,
IF(ISPICKVAL(Subscription_Period__c, &quot;28&quot;), 28,
IF(ISPICKVAL(Subscription_Period__c, &quot;29&quot;), 29,
IF(ISPICKVAL(Subscription_Period__c, &quot;30&quot;), 30,
IF(ISPICKVAL(Subscription_Period__c, &quot;31&quot;), 31,
IF(ISPICKVAL(Subscription_Period__c, &quot;32&quot;), 32,
IF(ISPICKVAL(Subscription_Period__c, &quot;33&quot;), 33,
IF(ISPICKVAL(Subscription_Period__c, &quot;34&quot;), 34,
IF(ISPICKVAL(Subscription_Period__c, &quot;35&quot;), 35,
36)))))))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subs Period Hidden</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Period_1__c</fullName>
        <label>Subscription Period</label>
        <picklist>
            <controllingField>Package_Type__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription_Period__c</fullName>
        <label>Subscription Period</label>
        <picklist>
            <controllingField>Subscription_Type__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <label>Subscription Type</label>
        <picklist>
            <picklistValues>
                <fullName>Termed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evergreen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tagged_to_Promo_for_Add_On_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tagged to Promo</label>
        <type>Checkbox</type>
    </fields>
    <label>Package</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Package_Code__c</columns>
        <columns>Base_Product_Count__c</columns>
        <columns>Billing_Type__c</columns>
        <columns>Package_Type__c</columns>
        <columns>Package_Price__c</columns>
        <columns>Effective_End_Date__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>Package_Type__c</columns>
        <columns>Subscription_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>tete</fullName>
        <columns>NAME</columns>
        <columns>Package_Code__c</columns>
        <columns>Base_Product_Count__c</columns>
        <columns>Billing_Type__c</columns>
        <columns>Package_Type__c</columns>
        <columns>Package_Price__c</columns>
        <columns>Effective_End_Date__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>BUSINESS TIMES</value>
        </filters>
        <label>test</label>
    </listViews>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Billing_Type_For_Grace_Period</fullName>
        <active>false</active>
        <description>Billing Type must be Recurring Postpaid if Package Type is Grace Period.</description>
        <errorConditionFormula>AND(TEXT(Package_Type__c)= &apos;Grace Period&apos;, ISBLANK(TEXT  (Billing_Type__c)))</errorConditionFormula>
        <errorDisplayField>Billing_Type__c</errorDisplayField>
        <errorMessage>Field must be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Calc_Total_Subscription_Period</fullName>
        <active>false</active>
        <description>Calculation of total subscription period for extension discount package</description>
        <errorConditionFormula>ISPICKVAL(Package_Type__c, &apos;Discount&apos;) &amp;&amp; 
ISPICKVAL(Package_Sub_Type__c, &apos;Extension&apos;) &amp;&amp; 
ISPICKVAL(Subscription_Type__c, &apos;Termed&apos;) &amp;&amp; Subs_Period_Hidden__c &gt; Duration_Hidden__c</errorConditionFormula>
        <errorDisplayField>Subscription_Period__c</errorDisplayField>
        <errorMessage>Subscription Period exceeds the Effectivity Duration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EffectiveEndisBeforeEffectiveStart</fullName>
        <active>true</active>
        <description>Effective End Date cannot be before the effective start date</description>
        <errorConditionFormula>Effective_End_Date__c &lt; Effective_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Effective_End_Date__c</errorDisplayField>
        <errorMessage>Effective End Date is before the effective start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Grace_Period_Evergreen</fullName>
        <active>true</active>
        <description>D-1537</description>
        <errorConditionFormula>AND(ISPICKVAL( Package_Type__c ,&apos;Grace Period&apos;),ISPICKVAL( Subscription_Type__c ,&apos;Evergreen&apos;))</errorConditionFormula>
        <errorDisplayField>Subscription_Type__c</errorDisplayField>
        <errorMessage>Grace Period Package should not have an Evergreen Subscription Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>One_Month_Subscription_Period</fullName>
        <active>true</active>
        <description>Subscription Period must be one month if Package Type is Grace Period.</description>
        <errorConditionFormula>AND(ISPICKVAL(Package_Type__c,&apos;Grace Period&apos;),NOT(ISPICKVAL(Subscription_Period__c,&apos;1&apos;)),ISPICKVAL(Subscription_Type__c, &apos;Termed&apos;))</errorConditionFormula>
        <errorDisplayField>Subscription_Period__c</errorDisplayField>
        <errorMessage>Subscription Period must be one month.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Code_Validation</fullName>
        <active>true</active>
        <description>Do not allow the user to change the Package Code.</description>
        <errorConditionFormula>IF(ISNULL( PRIORVALUE( Package_Code__c )),FALSE,ISCHANGED( Package_Code__c ) )</errorConditionFormula>
        <errorMessage>Package Code not allowed to be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Type_Add_On</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
    NOT(ISPICKVAL(Package_Type__c, &apos;Add On&apos;)),
    NOT(ISBLANK(Product_Family_for_Add_On_Packages__c))
)</errorConditionFormula>
        <errorDisplayField>Product_Family_for_Add_On_Packages__c</errorDisplayField>
        <errorMessage>Product Family should be NULL if Package type is not “Add on”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Type_Bundle</fullName>
        <active>false</active>
        <errorConditionFormula>TEXT(Package_Type__c) = &apos;Bundle&apos; &amp;&amp; Bundle_Discount_Count__c &gt; 1</errorConditionFormula>
        <errorDisplayField>Package_Type__c</errorDisplayField>
        <errorMessage>Only 1 Bundle Discount per Bundle Product is allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Type_Change_Add_On</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Package_Type__c) = &apos;Add On&apos; &amp;&amp; 
(Bundle_Discount_Count__c &gt; 0 || 
Bundle_Product_Count__c &gt; 0 || 
Extension_Discount_Count__c &gt; 0 || 
Extension_Product_Count__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Package_Type__c</errorDisplayField>
        <errorMessage>Conflict with Package Items that already exist. Only Base Product and Discount package items is allowed for Add On package type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Type_Change_Base</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Package_Type__c) = &apos;Base&apos; &amp;&amp; (Bundle_Discount_Count__c &gt; 0 || Bundle_Product_Count__c &gt; 0 || Extension_Discount_Count__c &gt; 0 || Extension_Product_Count__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Package_Type__c</errorDisplayField>
        <errorMessage>Conflict with Package Items that already exist. Only Base Product package items is allowed for Base package type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Type_Change_Bundle</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Package_Type__c) = &apos;Bundle&apos; &amp;&amp;  (Extension_Discount_Count__c &gt; 0 || 
Extension_Product_Count__c &gt; 0 || 
Discount_Count__c &gt; 0 ||
Base_Product_Count__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Package_Type__c</errorDisplayField>
        <errorMessage>Conflict with Package Items that already exist. Only Bundle Product and Bundle Discount package items are allowed for Bundle package type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Type_Change_Discount</fullName>
        <active>false</active>
        <errorConditionFormula>TEXT(Package_Type__c) = &apos;Discount&apos; &amp;&amp; (Bundle_Discount_Count__c &gt; 0 || 
Bundle_Product_Count__c &gt; 0 || 
Discount_Count__c &gt; 0 || 
Base_Product_Count__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Package_Type__c</errorDisplayField>
        <errorMessage>Conflict with Package Items that already exist. Only Extension Product and Extension Discount package items are allowed for Discount package type.</errorMessage>
    </validationRules>
</CustomObject>